Heading Left Align, spelling correction

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,7 @@ body {
   margin: 0;
   font-size: 3.2vh;
 }
+
+.heading {
+  text-align: left;
+}
